--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -1,6 +1,6 @@
 "scr_XMLNalogZaPrenos As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
-    LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
+    LoadingSpinnerColor: =App.Theme.Colors.Primary
     OnVisible: |
         =Set(
             isLoading,
@@ -189,9 +189,10 @@
                         ZIndex: =7
 
                         Label1_5 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -202,9 +203,10 @@
                             ZIndex: =2
 
                         Label1_6 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -215,9 +217,10 @@
                             ZIndex: =3
 
                         Label1_7 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -228,9 +231,10 @@
                             ZIndex: =4
 
                         Label1_8 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -241,9 +245,10 @@
                             ZIndex: =5
 
                         Label1_9 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -266,7 +271,7 @@
                     ZIndex: =2
 
                     "NalogZaPrenosLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                        BorderColor: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
                         Default: |
                             =First(Filter(colTransferLines, Line_No = scannedItem))
                         DelayItemLoading: =true
@@ -284,7 +289,7 @@
                         ZIndex: =1
 
                         Separator6_2 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =8
                             OnSelect: =Select(Parent)
@@ -293,8 +298,8 @@
                             ZIndex: =5
 
                         Rectangle5_2 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Fill: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =App.Theme.Colors.Darker30
                             Height: =Parent.TemplateHeight - Separator6_2.Height
                             OnSelect: =Select(Parent)
                             Visible: =ThisItem.IsSelected
@@ -311,6 +316,7 @@
                             Title5_2 As label:
                                 Color: =RGBA(50, 49, 48, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -329,6 +335,7 @@
                             Subtitle4_1 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -347,6 +354,7 @@
                             Body1_1 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =18
                                 OnSelect: =Select(Parent)
@@ -365,6 +373,7 @@
                             Body1_3 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -383,6 +392,7 @@
                             Body1_5 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -415,9 +425,10 @@
 
                         Label2_1 As label:
                             AlignInContainer: =AlignInContainer.Center
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =12
@@ -475,8 +486,8 @@
                     ZIndex: =3
 
                     Icon1_2 As icon.BackArrow:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =App.Theme.Colors.Darker30
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =25
@@ -505,7 +516,7 @@
                     ZIndex: =2
 
                     "NalogZaPrenosResEntry As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                        BorderColor: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =560
@@ -519,7 +530,7 @@
                         ZIndex: =1
 
                         Separator6_3 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =8
                             OnSelect: =Select(Parent)
@@ -528,8 +539,8 @@
                             ZIndex: =5
 
                         Rectangle5_11 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Fill: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =App.Theme.Colors.Darker30
                             Height: =Parent.TemplateHeight - Separator6_3.Height
                             OnSelect: =Select(Parent)
                             Visible: =ThisItem.IsSelected
@@ -546,6 +557,7 @@
                             Title5_3 As label:
                                 Color: =RGBA(50, 49, 48, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -565,6 +577,7 @@
                             Body1_8 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =18
                                 OnSelect: =Select(Parent)
@@ -584,6 +597,7 @@
                             Body1_10 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -603,6 +617,7 @@
                             Body1_11 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -638,22 +653,23 @@
                                 ZIndex: =11
 
                             DatePickerExpDateNalogZaPrenos As datepicker:
-                                BorderColor: =RGBA(89, 0, 0, 1)
-                                CalendarHeaderFill: =RGBA(164, 38, 44, 1)
+                                BorderColor: =App.Theme.Colors.Darker40
+                                CalendarHeaderFill: =App.Theme.Colors.Primary
                                 Color: =RGBA(0, 0, 0, 1)
                                 DefaultDate: =If(IsBlank(ThisItem.Exp_Date), Today(), ThisItem.Exp_Date)
                                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
                                 DisabledFill: =RGBA(244, 244, 244, 1)
                                 DisplayMode: =If(IsBlank(ThisItem.Exp_Date), DisplayMode.Disabled, DisplayMode.Edit)
+                                Font: =App.Theme.Font
                                 Format: ="dd.mm.yyyy"
                                 Height: =26
-                                HoverDateFill: =RGBA(222, 179, 184, 1)
-                                IconBackground: =RGBA(164, 38, 44, 1)
+                                HoverDateFill: =App.Theme.Colors.Lighter70
+                                IconBackground: =App.Theme.Colors.Primary
                                 OnChange: |-
                                     =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDateNalogZaPrenos.SelectedDate, "yyyy-mm-dd")})
                                 OnSelect: =
-                                SelectedDateFill: =RGBA(164, 38, 44, 1)
+                                SelectedDateFill: =App.Theme.Colors.Primary
                                 Width: =158
                                 X: =148
                                 Y: =92
@@ -678,8 +694,8 @@
                                 ZIndex: =15
 
                             "Icon5 As icon.'3DPrinting'":
-                                BorderColor: =RGBA(89, 0, 0, 1)
-                                Color: =RGBA(89, 0, 0, 1)
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =App.Theme.Colors.Darker30
                                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                 DisabledColor: =RGBA(244, 244, 244, 1)
                                 Height: =25
@@ -694,8 +710,8 @@
                                 ZIndex: =16
 
                             "Icon5_1 As icon.'3DPrinting'":
-                                BorderColor: =RGBA(89, 0, 0, 1)
-                                Color: =RGBA(89, 0, 0, 1)
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =App.Theme.Colors.Darker30
                                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                 DisabledColor: =RGBA(244, 244, 244, 1)
                                 Height: =25
@@ -724,9 +740,10 @@
 
                         Label2_4 As label:
                             AlignInContainer: =AlignInContainer.Center
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =12
@@ -751,14 +768,17 @@
                         ZIndex: =5
 
                         Button1_2 As button:
-                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            BorderColor: =App.Theme.Colors.Primary
+                            DisabledBorderColor: =RGBA(244, 244, 244, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             DisabledFill: =RGBA(244, 244, 244, 1)
-                            Fill: =RGBA(164, 38, 44, 1)
+                            Fill: =App.Theme.Colors.Primary
+                            Font: =App.Theme.Font
                             FontWeight: =FontWeight.Semibold
                             Height: =30
+                            HoverBorderColor: =App.Theme.Colors.Darker10
                             HoverColor: =RGBA(255, 255, 255, 1)
-                            HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                            HoverFill: =App.Theme.Colors.Darker10
                             OnSelect: |-
                                 =Switch(
                                     propertyToChange,
@@ -768,6 +788,9 @@
                                     UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No, {LOT_No: Text(TextInputCanvas1_2.Value)})
                                 );
                                 Set(changeValueModal, false);
+                            PressedBorderColor: =App.Theme.Colors.Darker40
+                            PressedColor: =Self.Color
+                            PressedFill: =App.Theme.Colors.Darker40
                             Size: =12
                             Text: ="Potvrdi"
                             Width: =130
@@ -776,8 +799,8 @@
                             ZIndex: =1
 
                         Icon4_2 As icon.Cancel:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Color: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =App.Theme.Colors.Darker30
                             DisabledBorderColor: =RGBA(166, 166, 166, 1)
                             DisabledColor: =RGBA(244, 244, 244, 1)
                             Height: =25
@@ -809,8 +832,8 @@
                     ZIndex: =3
 
                     Icon1_3 As icon.BackArrow:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =App.Theme.Colors.Darker30
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =25
@@ -836,10 +859,10 @@
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =15
             PaddingRight: =20
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
             Visible: =!isLoading
             Width: =Max(App.Width, App.MinScreenWidth)
             ZIndex: =3
@@ -864,15 +887,18 @@
 
             saveXml_5 As button:
                 AlignInContainer: =AlignInContainer.Center
-                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                BorderColor: =App.Theme.Colors.Primary
+                DisabledBorderColor: =RGBA(244, 244, 244, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
                 DisplayMode: =If(!isLoading, DisplayMode.Edit, DisplayMode.Disabled)
-                Fill: =RGBA(164, 38, 44, 1)
+                Fill: =App.Theme.Colors.Primary
+                Font: =App.Theme.Font
                 FontWeight: =FontWeight.Semibold
                 Height: =30
+                HoverBorderColor: =App.Theme.Colors.Darker10
                 HoverColor: =RGBA(255, 255, 255, 1)
-                HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                HoverFill: =App.Theme.Colors.Darker10
                 OnSelect: |
                     =UpdateContext({
                         transferJsonData:
@@ -955,6 +981,9 @@
                     If(response.folder = "ReadyForNAVProcessing", Navigate(scrEntry,ScreenTransition.Fade), Navigate(scr_XMLNalogZaPrenos,ScreenTransition.Fade));
                     
                     Notify(parsedResponseMessage.Message , If(parsedResponseMessage.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
+                PressedBorderColor: =App.Theme.Colors.Darker40
+                PressedColor: =Self.Color
+                PressedFill: =App.Theme.Colors.Darker40
                 Size: =12
                 Text: ="Sačuvaj"
                 Width: =100
