--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -1,6 +1,6 @@
 "scr_XMLNalogZaProdaju As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
-    LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
+    LoadingSpinnerColor: =App.Theme.Colors.Primary
     OnVisible: |
         =Set(
             isLoading,
@@ -183,9 +183,10 @@
                         ZIndex: =7
 
                         Label1_10 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -196,9 +197,10 @@
                             ZIndex: =2
 
                         Label1_11 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -209,9 +211,10 @@
                             ZIndex: =3
 
                         Label1_12 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -222,9 +225,10 @@
                             ZIndex: =4
 
                         Label1_13 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -235,9 +239,10 @@
                             ZIndex: =5
 
                         Label1_14 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -260,7 +265,7 @@
                     ZIndex: =2
 
                     "NalogZaProdajuLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                        BorderColor: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
                         Default: |
                             =First(Filter(colSalesLines, Text(Line_No) = scannedItem))
                         DelayItemLoading: =true
@@ -278,7 +283,7 @@
                         ZIndex: =1
 
                         Separator6_4 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =8
                             OnSelect: =Select(Parent)
@@ -287,8 +292,8 @@
                             ZIndex: =5
 
                         Rectangle5_5 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Fill: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =App.Theme.Colors.Darker30
                             Height: =Parent.TemplateHeight - Separator6_4.Height
                             OnSelect: =Select(Parent)
                             Visible: =ThisItem.IsSelected
@@ -305,6 +310,7 @@
                             Title5_4 As label:
                                 Color: =RGBA(50, 49, 48, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -323,6 +329,7 @@
                             Subtitle4_2 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -341,6 +348,7 @@
                             Body1_13 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =18
                                 OnSelect: =Select(Parent)
@@ -359,6 +367,7 @@
                             Body1_12 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -391,9 +400,10 @@
 
                         Label2_3 As label:
                             AlignInContainer: =AlignInContainer.Center
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =12
@@ -451,8 +461,8 @@
                     ZIndex: =3
 
                     Icon1_4 As icon.BackArrow:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =App.Theme.Colors.Darker30
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =25
@@ -481,7 +491,7 @@
                     ZIndex: =2
 
                     "NalogZaProdajuResEntry As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                        BorderColor: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =560
@@ -495,7 +505,7 @@
                         ZIndex: =1
 
                         Separator6_5 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =8
                             OnSelect: =Select(Parent)
@@ -504,8 +514,8 @@
                             ZIndex: =5
 
                         Rectangle5_12 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Fill: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =App.Theme.Colors.Darker30
                             Height: =Parent.TemplateHeight - Separator6_5.Height
                             OnSelect: =Select(Parent)
                             Visible: =ThisItem.IsSelected
@@ -513,8 +523,8 @@
                             ZIndex: =6
 
                         Icon2_1 As icon.AddDocument:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Color: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =App.Theme.Colors.Darker30
                             DisabledBorderColor: =RGBA(166, 166, 166, 1)
                             DisabledColor: =RGBA(244, 244, 244, 1)
                             Height: =25
@@ -536,8 +546,8 @@
                             ZIndex: =24
 
                             Icon2 As icon.AddDocument:
-                                BorderColor: =RGBA(89, 0, 0, 1)
-                                Color: =RGBA(89, 0, 0, 1)
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =App.Theme.Colors.Darker30
                                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                 DisabledColor: =RGBA(244, 244, 244, 1)
                                 Height: =25
@@ -554,6 +564,7 @@
                             Title5_5 As label:
                                 Color: =RGBA(50, 49, 48, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -573,6 +584,7 @@
                             Body1_15 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =18
                                 OnSelect: =Select(Parent)
@@ -592,6 +604,7 @@
                             Body1_16 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -611,6 +624,7 @@
                             Body1_17 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -646,22 +660,23 @@
                                 ZIndex: =21
 
                             DatePickerExpDateNalogZaProdaju As datepicker:
-                                BorderColor: =RGBA(89, 0, 0, 1)
-                                CalendarHeaderFill: =RGBA(164, 38, 44, 1)
+                                BorderColor: =App.Theme.Colors.Darker40
+                                CalendarHeaderFill: =App.Theme.Colors.Primary
                                 Color: =RGBA(0, 0, 0, 1)
                                 DefaultDate: =If(IsBlank(ThisItem.Exp_Date), Today(), ThisItem.Exp_Date)
                                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
                                 DisabledFill: =RGBA(244, 244, 244, 1)
                                 DisplayMode: =If(IsBlank(ThisItem.Exp_Date), DisplayMode.Disabled, DisplayMode.Edit)
+                                Font: =App.Theme.Font
                                 Format: ="dd.mm.yyyy"
                                 Height: =26
-                                HoverDateFill: =RGBA(222, 179, 184, 1)
-                                IconBackground: =RGBA(164, 38, 44, 1)
+                                HoverDateFill: =App.Theme.Colors.Lighter70
+                                IconBackground: =App.Theme.Colors.Primary
                                 OnChange: |-
                                     =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDateNalogZaProdaju.SelectedDate, "yyyy-mm-dd")})
                                 OnSelect: =
-                                SelectedDateFill: =RGBA(164, 38, 44, 1)
+                                SelectedDateFill: =App.Theme.Colors.Primary
                                 Width: =158
                                 X: =142
                                 Y: =87
@@ -700,9 +715,10 @@
 
                         Label2_5 As label:
                             AlignInContainer: =AlignInContainer.Center
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =12
@@ -727,14 +743,17 @@
                         ZIndex: =5
 
                         Button1 As button:
-                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            BorderColor: =App.Theme.Colors.Primary
+                            DisabledBorderColor: =RGBA(244, 244, 244, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             DisabledFill: =RGBA(244, 244, 244, 1)
-                            Fill: =RGBA(164, 38, 44, 1)
+                            Fill: =App.Theme.Colors.Primary
+                            Font: =App.Theme.Font
                             FontWeight: =FontWeight.Semibold
                             Height: =30
+                            HoverBorderColor: =App.Theme.Colors.Darker10
                             HoverColor: =RGBA(255, 255, 255, 1)
-                            HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                            HoverFill: =App.Theme.Colors.Darker10
                             OnSelect: |-
                                 =Switch(
                                     propertyToChange,
@@ -744,6 +763,9 @@
                                     UpdateIf(colSalesResEntries, NalogZaProdajuResEntry.Selected.Entry_No = ThisRecord.Entry_No, {LOT_No: Text(TextInputCanvas1.Value)})
                                 );
                                 Set(changeValueModal, false);
+                            PressedBorderColor: =App.Theme.Colors.Darker40
+                            PressedColor: =Self.Color
+                            PressedFill: =App.Theme.Colors.Darker40
                             Size: =12
                             Text: ="Potvrdi"
                             Width: =130
@@ -752,8 +774,8 @@
                             ZIndex: =1
 
                         Icon4 As icon.Cancel:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Color: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =App.Theme.Colors.Darker30
                             DisabledBorderColor: =RGBA(166, 166, 166, 1)
                             DisabledColor: =RGBA(244, 244, 244, 1)
                             Height: =25
@@ -785,8 +807,8 @@
                     ZIndex: =3
 
                     Icon1_5 As icon.BackArrow:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =App.Theme.Colors.Darker30
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =25
@@ -812,10 +834,10 @@
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =15
             PaddingRight: =20
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
             Visible: =!isLoading
             Width: =Max(App.Width, App.MinScreenWidth)
             ZIndex: =3
@@ -840,15 +862,18 @@
 
             saveXml_6 As button:
                 AlignInContainer: =AlignInContainer.Center
-                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                BorderColor: =App.Theme.Colors.Primary
+                DisabledBorderColor: =RGBA(244, 244, 244, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
                 DisplayMode: =If(!isLoading, DisplayMode.Edit, DisplayMode.Disabled)
-                Fill: =RGBA(164, 38, 44, 1)
+                Fill: =App.Theme.Colors.Primary
+                Font: =App.Theme.Font
                 FontWeight: =FontWeight.Semibold
                 Height: =30
+                HoverBorderColor: =App.Theme.Colors.Darker10
                 HoverColor: =RGBA(255, 255, 255, 1)
-                HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                HoverFill: =App.Theme.Colors.Darker10
                 OnSelect: |
                     =UpdateContext({
                         salesJsonData:
@@ -964,6 +989,9 @@
                     If(response.folder = "ReadyForNAVProcessing", Navigate(scrEntry,ScreenTransition.Fade), Navigate(scr_XMLNalogZaProdaju,ScreenTransition.Fade));
                     
                     Notify(parsedResponseMessage.Message , If(parsedResponseMessage.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
+                PressedBorderColor: =App.Theme.Colors.Darker40
+                PressedColor: =Self.Color
+                PressedFill: =App.Theme.Colors.Darker40
                 Size: =12
                 Text: ="Sačuvaj"
                 Width: =100
