--- a/BSiNS/Src/scr_XMLPrimke.fx.yaml
+++ b/BSiNS/Src/scr_XMLPrimke.fx.yaml
@@ -1,6 +1,6 @@
 "scr_XMLPrimke As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
-    LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
+    LoadingSpinnerColor: =App.Theme.Colors.Primary
     OnVisible: |
         =Set(
             isLoading,
@@ -160,9 +160,10 @@
                         ZIndex: =7
 
                         Label1_15 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -173,9 +174,10 @@
                             ZIndex: =2
 
                         Label1_16 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -186,9 +188,10 @@
                             ZIndex: =3
 
                         Label1_17 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =10
@@ -211,7 +214,7 @@
                     ZIndex: =2
 
                     "PrimkeLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                        BorderColor: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
                         Default: |
                             =First(Filter(colWarehouseLines, Text(Line_No) = scannedItem))
                         DelayItemLoading: =true
@@ -229,7 +232,7 @@
                         ZIndex: =1
 
                         Separator6_7 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =8
                             OnSelect: =Select(Parent)
@@ -238,8 +241,8 @@
                             ZIndex: =5
 
                         Rectangle5_7 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Fill: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =App.Theme.Colors.Darker30
                             Height: =Parent.TemplateHeight - Separator6_7.Height
                             OnSelect: =Select(Parent)
                             Visible: =ThisItem.IsSelected
@@ -249,6 +252,7 @@
                         Body1_25 As label:
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                             Height: =18
                             OnSelect: =Select(Parent)
@@ -274,6 +278,7 @@
                             Title5_7 As label:
                                 Color: =RGBA(50, 49, 48, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -292,6 +297,7 @@
                             Subtitle4_4 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -310,6 +316,7 @@
                             Body1_18 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =18
                                 OnSelect: =Select(Parent)
@@ -328,6 +335,7 @@
                             Body1_14 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =22
                                 OnSelect: =Select(Parent)
@@ -360,9 +368,10 @@
 
                         Label2_7 As label:
                             AlignInContainer: =AlignInContainer.Center
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =12
@@ -420,8 +429,8 @@
                     ZIndex: =3
 
                     Icon1_7 As icon.BackArrow:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =App.Theme.Colors.Darker30
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =25
@@ -450,7 +459,7 @@
                     ZIndex: =2
 
                     "Warehouse_Receipt_ResEntryGallery As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                        BorderColor: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =560
@@ -464,7 +473,7 @@
                         ZIndex: =1
 
                         Separator6_8 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =8
                             OnSelect: =Select(Parent)
@@ -473,8 +482,8 @@
                             ZIndex: =5
 
                         Rectangle5_13 As rectangle:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Fill: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =App.Theme.Colors.Darker30
                             Height: =Parent.TemplateHeight - Separator6_8.Height
                             OnSelect: =Select(Parent)
                             Visible: =ThisItem.IsSelected
@@ -491,6 +500,7 @@
                             Title5_8 As label:
                                 Color: =RGBA(50, 49, 48, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -510,6 +520,7 @@
                             Body1_20 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =18
                                 OnSelect: =Select(Parent)
@@ -529,6 +540,7 @@
                             Body1_23 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -548,6 +560,7 @@
                             Body1_24 As label:
                                 Color: =RGBA(0, 0, 0, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
                                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                                 Height: =Self.Size * 1.8
                                 OnSelect: =Select(Parent)
@@ -583,22 +596,23 @@
                                 ZIndex: =11
 
                             DatePickerExpDateNalogZaProdaju_1 As datepicker:
-                                BorderColor: =RGBA(89, 0, 0, 1)
-                                CalendarHeaderFill: =RGBA(164, 38, 44, 1)
+                                BorderColor: =App.Theme.Colors.Darker40
+                                CalendarHeaderFill: =App.Theme.Colors.Primary
                                 Color: =RGBA(0, 0, 0, 1)
                                 DefaultDate: =If(IsBlank(ThisItem.Exp_Date), Today(), ThisItem.Exp_Date)
                                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
                                 DisabledFill: =RGBA(244, 244, 244, 1)
                                 DisplayMode: =If(IsBlank(ThisItem.Exp_Date), DisplayMode.Disabled, DisplayMode.Edit)
+                                Font: =App.Theme.Font
                                 Format: ="dd.mm.yyyy"
                                 Height: =26
-                                HoverDateFill: =RGBA(222, 179, 184, 1)
-                                IconBackground: =RGBA(164, 38, 44, 1)
+                                HoverDateFill: =App.Theme.Colors.Lighter70
+                                IconBackground: =App.Theme.Colors.Primary
                                 OnChange: |-
                                     =UpdateIf(colSalesResEntries, Warehouse_Receipt_ResEntryGallery.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDateNalogZaProdaju_1.SelectedDate, "yyyy-mm-dd")})
                                 OnSelect: =
-                                SelectedDateFill: =RGBA(164, 38, 44, 1)
+                                SelectedDateFill: =App.Theme.Colors.Primary
                                 Width: =158
                                 X: =148
                                 Y: =92
@@ -636,9 +650,10 @@
                         ZIndex: =4
 
                         Label2_8 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
+                            BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
                             Height: =24
                             PaddingLeft: =20
                             Size: =12
@@ -660,8 +675,8 @@
                     ZIndex: =3
 
                     Icon1_8 As icon.BackArrow:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(89, 0, 0, 1)
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =App.Theme.Colors.Darker30
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =25
@@ -687,10 +702,10 @@
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =15
             PaddingRight: =20
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
             Visible: =!isLoading
             Width: =Max(App.Width, App.MinScreenWidth)
             ZIndex: =3
@@ -715,15 +730,18 @@
 
             saveXml_7 As button:
                 AlignInContainer: =AlignInContainer.Center
-                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                BorderColor: =App.Theme.Colors.Primary
+                DisabledBorderColor: =RGBA(244, 244, 244, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
                 DisplayMode: =If(!isLoading, DisplayMode.Edit, DisplayMode.Disabled)
-                Fill: =RGBA(164, 38, 44, 1)
+                Fill: =App.Theme.Colors.Primary
+                Font: =App.Theme.Font
                 FontWeight: =FontWeight.Semibold
                 Height: =30
+                HoverBorderColor: =App.Theme.Colors.Darker10
                 HoverColor: =RGBA(255, 255, 255, 1)
-                HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                HoverFill: =App.Theme.Colors.Darker10
                 OnSelect: |
                     =UpdateContext({
                         warehouseJsonData:
@@ -793,6 +811,9 @@
                     If(response.folder = "ReadyForNAVProcessing", Navigate(scrEntry,ScreenTransition.Fade), Navigate(scr_XMLPrimke,ScreenTransition.Fade));
                     
                     Notify(parsedResponseMessage.Message , If(parsedResponseMessage.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
+                PressedBorderColor: =App.Theme.Colors.Darker40
+                PressedColor: =Self.Color
+                PressedFill: =App.Theme.Colors.Darker40
                 Size: =12
                 Text: ="Sačuvaj"
                 Width: =100
