--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -7,7 +7,7 @@ App As appinfo:
             Contacts,
             Email = User().Email
         );
-        warehouseCode = "AM-01";
+        warehouseCode = "SGP-DZ";
         isMobile = If(App.Width > 600, false, true);
     OnStart: =
     StartScreen: =
