--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -133,12 +133,13 @@
     "UserLocale": "en-US"
   },
   "ScreenOrder": [
-    "scrEntry",
+    "scr_Entry",
     "scr_XMLNabavniNalog",
     "scr_XMLNalogZaPrenos",
     "scr_XMLNalogZaProdaju",
     "scr_XMLTemeljniceInventure",
     "scr_XMLPrimke",
-    "scr_XMLOtpremnice"
+    "scr_XMLOtpremnice",
+    "Screen1"
   ]
 }
